# Local-Video-RAG

./: CMakeLists.txt  Load-Model.ipynb  Local-Video-RAG-Report.docx  README.md  RoadMap.docx  main.cpp  search_engine.py
model/: model.txt
necessery-files/: other-files.txt
